/*
 * $Id: ChangeLog,v 1.664 2003/01/31 09:08:15 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-01-31 19:40 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/inet.c
    ! fixed a potential problem in InetRecv().

2003-01-31 01:06 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/objfunc.prg
    + Added new __objDerivedDiff( oObj, oBase, nScope )

2003-01-31 01:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/debug/dbgtwin.prg
    * Optimizations with SWITCH-CASE

2003-01-29 23:40 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/lang/msges.c
    * turn sub-section Texts to spanish.

2003-01-29 23:25 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/debug/dbgtarr.prg
  * source/debug/dbgtmenu.prg
  * source/debug/dbgtobj.prg
  * source/debug/dbgwa.prg
  * source/debug/debugger.prg
    * Optimizations with SWITCH-CASE

2003-01-29 23:00 UTC-0200 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/tget.prg
    ! Fixed problem on Delete() method that was not indicating that the Buffer has
      changes to Updated() function Reported by Sidney Junior

2003-01-30 01:41 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * makefile.bc
  * makefile.nt
  * makefile.vc
  * source/rtl/Makefile
  * source/rtl/hbrandom.c
    + Added HB_Random() func:
      HB_Random()--> nVar ( 0 <= nVar <= 1 )
      HB_Random( nCeil )--> nVar ( 0 <= nVar <= nCeil )
      ( or if nCeil < 0:  nCeil <= nVar <= 0 )
      HB_Random( nFloor, nCeil )--> nVar ( nFloor <= nVar <= nCeil )
      ( the smaller var is taken as floor).

  * tests/random.prg
    + Added a demo of the random function

  * source/rtl/gtQTc/filenew.xpm
  * source/rtl/gtQTc/fileopen.xpm
  * source/rtl/gtQTc/filesave.xpm
  * source/rtl/gtQTc/gtQTc.cpp
  * source/rtl/gtQTc/gtQTc.h
  * source/rtl/gtQTc/mouseQTc.c